--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -7,6 +7,11 @@ jobs:
     strategy:
       matrix:
         mingw: ["MINGW32", "MINGW64"]
+        include:
+        - mingw: "MINGW32"
+          archive-suffix: "-32bit"
+        - mingw: "MINGW64"
+          archive-suffix: "-64bit"
     defaults:
       run:
         shell: bash.exe --login -eo pipefail "{0}"
@@ -33,3 +38,16 @@ jobs:
 
     - name: Test
       run: make test
+
+    - name: Create artifacts
+      run: |
+        mkdir artifacts
+        cp */*.exe artifacts/
+        cp COPYING artifacts/
+        rm artifacts/*_tests.exe
+
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: xsys35c${{ matrix.archive-suffix }}
+        path: artifacts
