--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,7 +1,8 @@
 PREFIX ?= /usr/local
 
 HTMLS := $(patsubst %.adoc,%.html,$(wildcard *.adoc))
-MANUALS := xsys35c.1 xsys35dc.1 ald.1
+MANUALS := xsys35c.1 xsys35dc.1 ald.1 vsp.1
+MANUAL_ALIASES := pms.1 qnt.1
 
 all: html man
 html: $(HTMLS)
@@ -15,9 +16,9 @@ man: $(MANUALS)
 
 install: $(MANUALS)
 	mkdir -p $(PREFIX)/share/man/man1
-	cp $(MANUALS) $(PREFIX)/share/man/man1/
+	cp $(MANUALS) $(MANUAL_ALIASES) $(PREFIX)/share/man/man1/
 
 clean:
-	rm -f $(HTMLS) $(MANUALS)
+	rm -f $(HTMLS) $(MANUALS) $(MANUAL_ALIASES)
 
 .PHONY: all html man clean install
