Improve dirname() and basename()
They are renamed to dirname_utf8() and basename_utf8(), to avoid
conflicts with the POSIX dirname/basename functions.

Now they behave more like the POSIX functions, and recognize the drive
component (e.g. "C:") on Windows.

--- a/meson.build
+++ b/meson.build
@@ -39,6 +39,7 @@ common_tests_srcs = [
   'common/ald_test.c',
   'common/common_tests.c',
   'common/sjisutf_test.c',
+  'common/util_test.c',
 ]
 
 common_tests = executable('common_tests', common_tests_srcs, dependencies : common)
