Switch Windows 64-bit build from mingw64 to ucrt64

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -3,12 +3,12 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: windows-2019
+    runs-on: windows-latest
     strategy:
       matrix:
         include:
         - { sys: MINGW32, archive-suffix: "-32bit" }
-        - { sys: MINGW64, archive-suffix: "-64bit" }
+        - { sys: UCRT64, archive-suffix: "-64bit" }
     defaults:
       run:
         shell: msys2 {0}
@@ -21,6 +21,8 @@ jobs:
         msystem: ${{ matrix.sys }}
         release: false
         pacboy: >-
+          diffutils:
+          gcc:p
           meson:p
           pkgconf:p
           libpng:p
