--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -45,7 +45,7 @@ jobs:
         cp build/*.exe artifacts/
         rm artifacts/*_tests.exe
         strip artifacts/*.exe
-        cp COPYING artifacts/
+        cp COPYING CHANGELOG.md artifacts/
         mkdir artifacts/docs
         cp build/*.html artifacts/docs
         mkdir artifacts/docs/image
